--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
+    "jest": "^26.6.3",
     "nodemon": "^1.19.1",
     "pre-commit": "^1.2.2"
   },
